--- a/_projects/index.html
+++ b/_projects/index.html
@@ -1,96 +1,40 @@
 ---
-layout: page
-permalink: /projects/ufo/
-title: IS 445 Homework 5 Jekyll Webpage - UFO Sighting Visualizations
-tools: [Python, Altair, Vega-Lite, HTML]
-image: /assets/pngs/ufo_thumb.png
-description: Interactive visualizations of UFO sightings using Python, Altair, & Vega-Lite!
+name: UFO Sighting Visualizations
+tools: [Python, HTML, altair, vega-lite]
+image: assets/pngs/ufo_thumb.png
+description: An exploration of UFO sightings using Python and Altair, featuring a geospatial scatter plot and a bar chart of UFO shapes.
+custom_js:
+  - vega.min
+  - vega-lite.min
+  - vega-embed.min
+  - justcharts
+permalink: /projects/ufo
 ---
 
-<!DOCTYPE html>
-<!--
-  portfolYOU Jekyll theme by Youssef Raafat
-  Free for personal & commercial use under the MIT license
-  https://github.com/YoussefRaafatNasry/portfolYOU
-  IS 445 Homework 5 - UFO Sighting Visualizations
--->
+## UFO Sighting Visualizations
 
-<html lang="en" class="h-100">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IS 445 Homework 5 Jekyll Webpage - UFO Sighting Visualizations</title>
-    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-    <style>
-      body { 
-          font-family: Arial, sans-serif; 
-          margin: 20px; 
-          min-height: 100vh; 
-          display: flex; 
-          flex-direction: column; 
-      }
-      h1 { font-size: 2em; }
-      h2 { font-size: 1.5em; }
-      .content { flex: 1; }
-      .button-container {
-          display: flex;
-          justify-content: space-between;
-          margin-top: 20px;
-          padding-bottom: 20px;
-      }
-      .button { 
-          display: inline-block; 
-          padding: 10px 20px; 
-          background-color: #007bff; 
-          color: white; 
-          text-decoration: none; 
-          border-radius: 5px; 
-      }
-      .button:hover { background-color: #0056b3; }
-    </style>
-</head>
+This page presents two visualizations created using Python and Altair based on a UFO sightings dataset. One visualization maps the geospatial distribution of sightings, while the other examines the frequency distribution of different UFO shapes.
 
-<body>
-    <h1>IS 445 Homework 5 Jekyll Webpage - UFO Sighting Visualizations</h1>
-    <p>This project presents two interactive visualizations of UFO sightings using Python, Altair, and Vega-Lite. The first visualization is a scatter plot that maps the geographic distribution of UFO sightings, while the second visualization is a bar chart that shows the frequency distribution of reported UFO shapes.</p>
+---
 
-    <h2>Visualization 1: Scatter Plot of UFO Sightings</h2>
-    <div id="vis1"></div>
-    <script type="text/javascript">
-        vegaEmbed("#vis1", "/assets/plots/scatter_plot.html");
-    </script>
-    <p>This scatter plot visualizes UFO sightings by plotting their latitude and longitude coordinates on a map. The datetime variable is encoded as a temporal field using the inferno sequential color scheme—darker hues indicate more recent sightings, while lighter hues denote older events. Interactive tooltips display details such as the sighting date and coordinates, enhancing the spatial exploration of the dataset. In the Python notebook, I transformed raw date strings into datetime objects and filtered out records with missing or invalid data to maintain data quality.</p>
+###  Viz 1: Scatter Plot of UFO Sightings
 
-    <h2>Visualization 2: Bar Chart of UFO Shapes</h2>
-    <div id="vis2"></div>
-    <script type="text/javascript">
-        vegaEmbed("#vis2", "/assets/plots/bar_chart.html");
-    </script>
-    <p>This bar chart represents the frequency distribution of UFO shapes reported in the dataset. The x-axis encodes the UFO shape (a nominal variable) and the y-axis quantifies the number of sightings (a quantitative variable). I implemented an interactive hover effect that highlights the selected bar in steelblue while dimming the others, thereby assisting users in focusing on specific categories and comparing values effectively. Data transformations in Python included aggregating and grouping the UFO sighting data by shape.</p>
+<iframe src="/assets/scatter_plot.html" width="100%" height="600" style="border:none;"></iframe>
 
-    <h3>Interactivity</h3>
-    <p>For the bar chart, the interactive hover effect allows users to instantly highlight a specific UFO shape, which improves readability and comparisons between categories. This dynamic feedback elevates the interactivity beyond standard panning/zooming, making the visualization more engaging.</p>
+<p style="font-size:18px;">
+Here, I provide a geospatial scatter plot wherein I plot the reported UFO sightings against their latitude and longitude coordinates. The map provides a spatial indication of where the sightings are occurring, and therefore it is easy for one to identify clusters and trends in different geographical locations. For the design, I employed quantitative encodings for both axes (longitude for x-axis and latitude for y-axis) to place each sighting on the map accordingly. I quantified the datetime variable as a temporal field with a sequential color scheme (inferno) that encodes sightings over time by mapping darker colors to more recent incidents and lighter colors to older incidents. On the analysis end, I broke up the raw date strings into actual datetime objects and excluded any records missing coordinate or date information for the sake of data integrity. While the story itself depends on tooltips to provide interactivity through the display of the precise date and coordinate information on hovering over any point, the latter function takes learning to another level by providing viewers with more context without taking up visual space.
+</p>
+---
 
-    <h2>Search The Data & Methods</h2>
-    <p>Below are the links to the dataset and the Python notebook used to generate these visualizations. (Note: The Python notebook is rendered on GitHub.)</p>
-    <div class="button-container">
-      <a href="https://github.com/UIUC-iSchool-DataViz/is445_data/raw/main/ufo-scrubbed-geocoded-time-standardized-00.csv" class="button">The Data</a>
-      <a href="https://github.com/justinw2274/justinw2274.github.io/blob/main/Workbook.ipynb" class="button">The Code</a>
-    </div>
+### Viz 2: Bar Chart of UFO Shapes
 
-    <!-- GitHub Buttons and additional JS libraries -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
-    <script> new WOW().init(); </script>
-    <script>
-      $(function () {
-          $('[data-toggle="tooltip"]').tooltip()
-      });
-    </script>
-</body>
-</html>
+<iframe src="/assets/bar_chart.html" width="100%" height="650" style="border:none;"></iframe>
+
+<p style="font-size:18px;">
+The second plot discloses the categorical organization of the UFO data by means of a bar graph that is used to portray the frequency of shapes in the UFO sightings. It shifts the focus from spatial-temporal patterns to an investigation of the heterogeneity found in shapes. While creating this chart, I grouped the data based on counted frequency of each and every shape, i.e., raw data converted into tabulated form with most and least frequent shapes. The category variable (category of UFO) is plotted on the x-axis and quantitative value for UFO sighting on the y-axis such that comparison is simple across categories. The color scheming (category10) was chosen so that each bar in the bar chart would have a disguishied color. For better readability and user interaction, I used an interactive hover effect: when you hover over one single bar, it becomes highlighted in black as that is the absence of color (opposite from all of the other bars in the chart). This interactivity allows users to highlight one single category instantly, and better readability and comparison of values of different shapes are possible. Data transformation step included splitting the data set by 'shape' column and resetting index so that it would be available for visualization to aggregate properly and as accurately as possible.
+</p>
+---
+
+<div class = "left"> {% include elements/button.html link = "https://github.com/UIUC-iSchool-DataViz/is445_data/raw/main/ufo-scrubbed-geocoded-time-standardized-00.csv" text = "The Data" %} </div> 
+
+<div class = "right"> {% include elements/button.html link = "https://github.com/justinw2274/justinw2274.github.io/blob/main/Workbook.ipynb" text = "The Analysis" %} </div>
