--- a/_projects/index.html
+++ b/_projects/index.html
@@ -8,7 +8,7 @@ custom_js:
   - vega-lite.min
   - vega-embed.min
   - justcharts
-permalink: /projects/ufo
+permalink: /projects/ufo/index.html
 ---
 
 ## UFO Sighting Visualizations
