--- a/_projects/index.html
+++ b/_projects/index.html
@@ -9,7 +9,7 @@ custom_js:
   - vega-lite.min
   - vega-embed.min
   - justcharts
-permalink: /projects/ufo
+permalink: /projects/ufo/index
 ---
 
 ## UFO Sighting Visualizations
