--- a/_projects/index.html
+++ b/_projects/index.html
@@ -1,8 +1,7 @@
-
 ---
 name: UFO Sighting Visualizations
 tools: [Python, HTML, altair, vega-lite]
-image: assets/scatter_plot.html
+image: assets/pngs/ufo_thumb.png
 description: An exploration of UFO sightings using Python and Altair, featuring a geospatial scatter plot and a bar chart of UFO shapes.
 custom_js:
   - vega.min
